# zk-schnorr

./: .gitignore  CHANGELOG.md  Cargo.toml  DEVELOPER_GUIDE.md  DOCUMENTATION_INDEX.md  LICENSE  README.md  SECURITY.md  test_examples.rs
.cargo/: audit.toml
.github/workflows/: ci.yml
docs/: API.md  EXAMPLES.md  spec.md
examples/: basic_usage.rs
src/: batch.rs  errors.rs  key.rs  lib.rs  serialization.rs  signature.rs  tests.rs  transcript.rs
