[package]
name = "zkschnorr"
version = "1.0.0"
authors = ["Usman Shahid"]
edition = "2021"
readme = "README.md"
license = "MIT"

categories = ["cryptography"]
keywords = ["cryptography", "crypto", "signatures", "schnorr", "batch"]
description = "A pure-Rust implementation of Schnorr Protocol using Ristretto"

[dependencies]
thiserror = "1"
merlin = "2"
rand_core = { version = "0.5", default-features = false }
rand = "0.7"
curve25519-dalek = { version = "3", features = ["serde"] }
serde = { version = "1.0", features=["derive"] }
hex = "^0.3"
sha2 = "0.10"

[[bin]]
name = "test_examples"
path = "test_examples.rs"

[features]
default = []
nightly = ["curve25519-dalek/nightly", "curve25519-dalek/alloc"]
