[package]
name = "zkschnorr"
version = "0.1.0"
authors = ["Usman Shahid"]
edition = "2021"
readme = "README.md"
# documentation = "https://github.com/twilight-project/zk-schnorr#readme"
license = "MIT"
repository = "https://github.com/twilight-project/zk-schnorr"
homepage = "https://github.com/twilight-project/zk-schnorr"
categories = ["cryptography", "algorithms"]
keywords = ["cryptography", "crypto", "signatures", "schnorr", "batch", "ristretto", "zero-knowledge"]
description = "A pure-Rust implementation of Multipoint Schnorr Signature Protocol using Ristretto (⚠️ Not audited - experimental use only)"
exclude = [
    "target/",
    ".git/",
    ".github/",
    "*.log"
]

[dependencies]
thiserror = "1"
merlin = "2"
rand_core = { version = "0.5", default-features = false }
rand = "0.7"
curve25519-dalek = { version = "3", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
hex = "^0.3"

[features]
default = []
#nightly = ["curve25519-dalek/nightly", "curve25519-dalek/alloc"]

[dev-dependencies]
# Add if you need additional test dependencies

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"
